--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Colegio de Educación Inicial - IE77SVC</h1>
+        <h1> INSTITUCIÓN EDUCATIVA N° 77 SANTÍSIMA VIRGEN DEL CARMEN </h1>
         <p>Inspirando el aprendizaje desde la primera infancia</p>
     </header>
 
@@ -33,9 +33,9 @@
 
     <section id="contact">
         <h2>Contacto</h2>
-        <p>Dirección: Calle Ficticia 123, Ciudad</p>
-        <p>Teléfono: (01) 123-4567</p>
-        <p>Email: info@ie77svc.com</p>
+        <p>Dirección:  Callao</p>
+        <p>Teléfono: </p>
+        <p>Email: inicial77svc@gmail.com</p>
     </section>
 
     <footer>
