--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <p>Email: inicial77svc@gmail.com</p>
     </section>
 
+    <section id="Noticias">
+        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FIE77SVC%2Fposts%2Fpfbid0oxiuMFoE1iiLDxKaYC2mYQPj8ekj26TarDKsrUgFWjuoX7Goop3WpdeKor9DdK2ol&show_text=true&width=500" width="500" height="792" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    </section>
+
+
     <footer>
         <p>&copy; 2024 Colegio de Educación Inicial IE77SVC</p>
     </footer>
