--- a/index.html
+++ b/index.html
@@ -39,8 +39,18 @@
     </section>
 
     <section id="Noticias">
-       <p><iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FIE77SVC%2Fposts%2Fpfbid0oxiuMFoE1iiLDxKaYC2mYQPj8ekj26TarDKsrUgFWjuoX7Goop3WpdeKor9DdK2ol&show_text=true&width=500" width="500" height="792" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p>
-       <p><iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FIE77SVC%2Fposts%2Fpfbid02Mp7zsatpK8Cqdf6pbQBnDBSGDHCavBNRqdnZeZsY7L3iVJSoruVV34Vngfhg3tVNl&show_text=true&width=500" width="500" height="792" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p> 
+       <div class="contenedorpostfacebook">
+        <div class="postfacebook">
+          <p>
+              <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FIE77SVC%2Fposts%2Fpfbid0oxiuMFoE1iiLDxKaYC2mYQPj8ekj26TarDKsrUgFWjuoX7Goop3WpdeKor9DdK2ol&show_text=true&width=500" width="500" height="792" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+          </p>
+        </div>
+       <div class="postfacebook">
+          <p>
+              <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FIE77SVC%2Fposts%2Fpfbid02Mp7zsatpK8Cqdf6pbQBnDBSGDHCavBNRqdnZeZsY7L3iVJSoruVV34Vngfhg3tVNl&show_text=true&width=500" width="500" height="792" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+          </p>
+       </div>
+       </div> 
     </section>
 
 
