--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
+        <img src="URL_DE_LA_IMAGEN" alt="Logo del Colegio" class="logo">
         <h1> INSTITUCIÓN EDUCATIVA N° 77 SANTÍSIMA VIRGEN DEL CARMEN </h1>
-        <p>Inspirando el aprendizaje desde la primera infancia</p>
+        <p>Educando con calidad y calidez</p>
     </header>
 
     <nav>
