--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="URL_DE_LA_IMAGEN" alt="Logo del Colegio" class="logo">
+        <img src="https://github.com/inicial77svc/IE77SVC/blob/main/IEI%20N%C2%BA%2077%20%E2%80%9CSant%C3%ADsima%20Virgen%20del%20Carmen%E2%80%9D%20Educando%20con%20calidez%20y%20calidad%20DREC%20(1).png?raw=true" alt="Logo del Colegio" class="logo">
         <h1> INSTITUCIÓN EDUCATIVA N° 77 SANTÍSIMA VIRGEN DEL CARMEN </h1>
         <p>Educando con calidad y calidez</p>
     </header>
